--- a/Assignment-1/4.1.css
+++ b/Assignment-1/4.1.css
@@ -97,4 +97,14 @@ body {
     background-color: rgb(0, 114, 66);
   }
 
-  
+  a.home-link {
+    color: #fff; /* Text color */
+    background-color: #333; /* Background color */
+    padding: 5px 10px; /* Padding around the text */
+    border-radius: 5px; /* Rounded corners */
+    text-decoration: none; /* Remove underline */
+}
+
+a.home-link:hover {
+    background-color: #555; /* Background color on hover */
+}
