--- a/Assignment-1/Game Design.css
+++ b/Assignment-1/Game Design.css
@@ -52,3 +52,14 @@
         background: #232931; 
         text-decoration: none; 
     } 
+    a.home-link {
+        color: #fff; 
+        background-color: #333; 
+        padding: 5px 10px; 
+        border-radius: 5px; 
+        text-decoration: none;
+    }
+    
+    a.home-link:hover {
+        background-color: #555; 
+    }
