--- a/Assignment-1/Strings.css
+++ b/Assignment-1/Strings.css
@@ -105,3 +105,14 @@ body {
     border: none;
     background-color: rgb(0, 114, 66);
   }
+  a.home-link {
+    color: #fff; 
+    background-color: #a61a1a; 
+    padding: 5px 10px; 
+    border-radius: 5px; 
+    text-decoration: none; 
+}
+
+a.home-link:hover {
+    background-color: #cd5f5f; 
+}
